feat: :memo: update ref links

--- a/notebooks/_v1.ipynb
+++ b/notebooks/_v1.ipynb
@@ -43,7 +43,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📊 DATASET FROM https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud"
+        "## 📊 REFERENCE LINKS\n",
+        "- Dataset: https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud\n",
+        "- Github: https://github.com/trungdung1711/credit_card_fraud_detection"
       ],
       "metadata": {
         "id": "ZXodaDa0J2G6"
@@ -85,7 +87,7 @@
         "id": "VyQ0aIfHSOmH",
         "outputId": "740ad1c8-9e90-49da-c95f-be2c08c60c1e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +136,7 @@
       "metadata": {
         "id": "yfn7Z5GdTk2E"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +161,7 @@
       "metadata": {
         "id": "mHn_jcnBULPY"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +182,7 @@
       "metadata": {
         "id": "8cMG4QF9UYkm"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +208,7 @@
         "id": "RttCsenFT5i_",
         "outputId": "8416b3a5-e967-40bb-ce99-3fac5277dd4d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -588,7 +590,7 @@
         "id": "AcJzHLhbaiTd",
         "outputId": "1801df80-9dd8-43f9-a089-98c8a6d560db"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,15 +641,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🔍 EXPLORATORY DATA ANALYSIS"
-      ],
-      "metadata": {
-        "id": "CvsHWVBaKorE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "\n",
         "\n",
         "---\n",
@@ -655,6 +648,15 @@
       ],
       "metadata": {
         "id": "Qo5us8xhh6mP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 🔍 EXPLORATORY DATA ANALYSIS"
+      ],
+      "metadata": {
+        "id": "CvsHWVBaKorE"
       }
     },
     {
@@ -688,7 +690,7 @@
       "metadata": {
         "id": "3Aqmfy6MhQJQ"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -713,7 +715,7 @@
         "id": "MZJDFRwhZzaQ",
         "outputId": "471895d7-76ca-47d7-abf2-39c4f855fccf"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +790,7 @@
         "id": "WE7eF2Q8YkLa",
         "outputId": "23945ade-60b2-4743-a40a-bb77a584fe7e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,7 +844,7 @@
         "id": "JkWUQZ_lgTzm",
         "outputId": "158ff3be-1001-4621-a22c-d64018ab218b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -875,7 +877,7 @@
         "id": "JpWqPGKRjlNu",
         "outputId": "fe886bb7-254b-4978-9be8-17883d31bc4c"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -926,7 +928,7 @@
         "id": "ueCftgB2tKCd",
         "outputId": "3d76e93a-e6b4-476a-fc3d-182c6a5b8634"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -969,7 +971,7 @@
         "id": "FoPV9EYG6_LG",
         "outputId": "d02de629-e327-4087-a1e0-9f966103e6d4"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1010,7 +1012,7 @@
         "id": "lu_nci1r39G6",
         "outputId": "9855fe8f-bee4-4083-dae5-be1bec07a705"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1051,7 +1053,7 @@
         "id": "NZaKpZAd9yJL",
         "outputId": "6f842bf1-d11a-4255-81a4-820ddc462bdc"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1092,7 +1094,7 @@
         "id": "ctFSfNO3Bo3n",
         "outputId": "29520c46-df4c-41d0-fa72-b5e21d408ba9"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
