feat: :bug: update data downloading

--- a/notebooks/_v1.ipynb
+++ b/notebooks/_v1.ipynb
@@ -76,8 +76,8 @@
       "cell_type": "code",
       "source": [
         "! curl -L -o ./creditcardfraud.zip https://www.kaggle.com/api/v1/datasets/download/mlg-ulb/creditcardfraud\n",
-        "! mkdir ./dataset\n",
-        "! unzip ./creditcardfraud.zip -d ./dataset\n",
+        "! mkdir ./data\n",
+        "! unzip ./creditcardfraud.zip -d ./data\n",
         "! rm ./creditcardfraud.zip"
       ],
       "metadata": {
@@ -85,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VyQ0aIfHSOmH",
-        "outputId": "88a0e833-2b38-410a-b59a-f60e203150ca"
+        "outputId": "d20ea14f-8769-496d-bd4b-d52ee5b195a7"
       },
-      "execution_count": 1,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,9 +96,9 @@
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
             "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-            "100 65.9M  100 65.9M    0     0  57.5M      0  0:00:01  0:00:01 --:--:-- 97.5M\n",
+            "100 65.9M  100 65.9M    0     0   113M      0 --:--:-- --:--:-- --:--:--  113M\n",
             "Archive:  ./creditcardfraud.zip\n",
-            "  inflating: ./dataset/creditcard.csv  \n"
+            "  inflating: ./data/creditcard.csv   \n"
           ]
         }
       ]
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "yfn7Z5GdTk2E"
       },
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "mHn_jcnBULPY"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -188,18 +188,6 @@
       "metadata": {
         "id": "sc66hBKVUV6k"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "DATASET_DIR = \"dataset\"\n",
-        "DATASET = \"creditcard.csv\""
-      ],
-      "metadata": {
-        "id": "8cMG4QF9UYkm"
-      },
-      "execution_count": 4,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -213,7 +201,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(f\"./{DATASET_DIR}/{DATASET}\")\n",
+        "df = pd.read_csv(\"./data/creditcard.csv\")\n",
         "print_df(df)"
       ],
       "metadata": {
@@ -222,9 +210,9 @@
           "height": 132
         },
         "id": "RttCsenFT5i_",
-        "outputId": "a6f2138b-6c76-4117-982a-66e55a47d2e3"
+        "outputId": "59f82b2e-5a2c-4b70-8381-ea6e232c60d6"
       },
-      "execution_count": 5,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,7 +240,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-41e4d2e6-f410-4af7-948a-4512f13f1ae6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1698d155-3e30-4a63-a812-3415343c3e67\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -379,7 +367,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41e4d2e6-f410-4af7-948a-4512f13f1ae6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1698d155-3e30-4a63-a812-3415343c3e67')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -431,12 +419,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-41e4d2e6-f410-4af7-948a-4512f13f1ae6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1698d155-3e30-4a63-a812-3415343c3e67 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-41e4d2e6-f410-4af7-948a-4512f13f1ae6');\n",
+              "        const element = document.querySelector('#df-1698d155-3e30-4a63-a812-3415343c3e67');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -456,8 +444,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-93d0e801-bdc0-4ca4-9d4f-0b5926bcd89d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-93d0e801-bdc0-4ca4-9d4f-0b5926bcd89d')\"\n",
+              "    <div id=\"df-93c80a09-ffa2-4473-9f06-7f37658c32d7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-93c80a09-ffa2-4473-9f06-7f37658c32d7')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -576,7 +564,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-93d0e801-bdc0-4ca4-9d4f-0b5926bcd89d button');\n",
+              "            document.querySelector('#df-93c80a09-ffa2-4473-9f06-7f37658c32d7 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -604,9 +592,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AcJzHLhbaiTd",
-        "outputId": "ec7777d6-d0b0-400a-d8b3-08ca20385bf0"
+        "outputId": "49897abd-7f2c-4e78-e048-b35e748114b9"
       },
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +694,7 @@
       "metadata": {
         "id": "3Aqmfy6MhQJQ"
       },
-      "execution_count": 7,
+      "execution_count": 29,
       "outputs": []
     },
     {
